# python-rurrning

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.devcontainer/: devcontainer.json
backend/: pyproject.toml
backend/src/python_rurrning/: main.py
backend/tests/: test_main.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
